Cargar canciones de excel al modelo

--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -1716,6 +1716,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cargar canciones"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cargarCancionesArchivoBtnActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
