Revert "Validar nombre"

--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -997,10 +997,10 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="nombreCancionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="generoCancionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -1008,37 +1008,20 @@
                                   <Component id="cantanteCancionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="discoCancionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="cantanteCancionInput" min="-2" pref="197" max="-2" attributes="0"/>
-                                  <Component id="discoCancionCombo" min="-2" pref="197" max="-2" attributes="0"/>
-                                  <Component id="duracionCancionInput" alignment="0" min="-2" pref="197" max="-2" attributes="0"/>
-                                  <Component id="generoCancionInput" alignment="0" min="-2" pref="197" max="-2" attributes="0"/>
-                                  <Component id="nombreCancionInput" min="-2" pref="197" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="discoCancionCombo" pref="197" max="32767" attributes="0"/>
+                                  <Component id="nombreCancionInput" max="32767" attributes="0"/>
+                                  <Component id="generoCancionInput" max="32767" attributes="0"/>
+                                  <Component id="duracionCancionInput" max="32767" attributes="0"/>
+                                  <Component id="cantanteCancionInput" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-                              <Component id="botonAgregarCancion" min="-2" pref="188" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="botonAgregarCancion" alignment="0" min="-2" pref="188" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="93" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="cancion" min="-2" max="-2" attributes="0"/>
-                          <Component id="disco" min="-2" max="-2" attributes="0"/>
-                          <Component id="seleccionarDiscoComboBox" min="-2" pref="194" max="-2" attributes="0"/>
-                          <Component id="jScrollPane6" min="-2" pref="247" max="-2" attributes="0"/>
-                          <Component id="listaCancion" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="seleccionarCancionComboBox" min="-2" pref="192" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
-                              <Component id="editarCancionBtn" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                       <EmptySpace pref="159" max="32767" attributes="0"/>
                       <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
-
+                      <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1046,53 +1029,41 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="disco" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="9" max="32767" attributes="0"/>
-                              <Component id="seleccionarDiscoComboBox" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="59" pref="59" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="listaCancion" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="nombreCancionLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="nombreCancionInput" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jScrollPane6" min="-2" pref="211" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                              <Component id="cancion" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="generoCancionInput" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="generoCancionLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="generoCancionInput" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="duracionCancionLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="duracionCancionInput" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="cantanteCancionInput" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="cantanteCancionLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="cantanteCancionInput" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="discoCancionLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="discoCancionCombo" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                              <Component id="botonAgregarCancion" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                              <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="seleccionarCancionComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="editarCancionBtn" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="botonAgregarCancion" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="164" max="32767" attributes="0"/>
+                      <EmptySpace pref="230" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1156,74 +1127,21 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAgregarCancionActionPerformed"/>
               </Events>
             </Component>
-            <Container class="javax.swing.JScrollPane" name="jScrollPane6">
-              <AuxValues>
-                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
-              </AuxValues>
+            <Container class="javax.swing.JPanel" name="jPanel2">
 
-              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
-              <SubComponents>
-                <Component class="javax.swing.JList" name="listaCanciones">
-                  <Properties>
-                    <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                      <StringArray count="0"/>
-                    </Property>
-                  </Properties>
-                  <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-                  </AuxValues>
-                </Component>
-              </SubComponents>
+              <Layout>
+                <DimensionLayout dim="0">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <EmptySpace min="0" pref="304" max="32767" attributes="0"/>
+                  </Group>
+                </DimensionLayout>
+                <DimensionLayout dim="1">
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <EmptySpace min="0" pref="265" max="32767" attributes="0"/>
+                  </Group>
+                </DimensionLayout>
+              </Layout>
             </Container>
-            <Component class="javax.swing.JComboBox" name="seleccionarDiscoComboBox">
-              <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="0"/>
-                </Property>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="seleccionarDiscoComboBoxActionPerformed"/>
-              </Events>
-              <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-              </AuxValues>
-            </Component>
-            <Component class="javax.swing.JComboBox" name="seleccionarCancionComboBox">
-              <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="0"/>
-                </Property>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="seleccionarCancionComboBoxActionPerformed"/>
-              </Events>
-              <AuxValues>
-                <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-              </AuxValues>
-            </Component>
-            <Component class="javax.swing.JLabel" name="disco">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Disco:"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="cancion">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Cancion:"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JLabel" name="listaCancion">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Lista de canciones:"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JButton" name="editarCancionBtn">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Ver informacion"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editarCancionBtnActionPerformed"/>
-              </Events>
-            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="programasTab">
