--- a/src/View/MenuPrincipal.form
+++ b/src/View/MenuPrincipal.form
@@ -798,7 +798,7 @@
                                           <Component id="ubicacionDiscoTextField" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <Component id="botonCrearDisco" alignment="0" pref="270" max="32767" attributes="0"/>
+                                  <Component id="botonCrearDisco" alignment="0" pref="281" max="32767" attributes="0"/>
                                   <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -1759,13 +1759,7 @@
                 <Component class="javax.swing.JList" name="listaCanciones">
                   <Properties>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-                      <StringArray count="5">
-                        <StringItem index="0" value="Item 1"/>
-                        <StringItem index="1" value="Item 2"/>
-                        <StringItem index="2" value="Item 3"/>
-                        <StringItem index="3" value="Item 4"/>
-                        <StringItem index="4" value="Item 5"/>
-                      </StringArray>
+                      <StringArray count="0"/>
                     </Property>
                   </Properties>
                   <AuxValues>
@@ -1791,12 +1785,7 @@
             <Component class="javax.swing.JComboBox" name="seleccionarCancionComboBox">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
               <AuxValues>
